--- a/src/app/tag-input/tag-input.component.html
+++ b/src/app/tag-input/tag-input.component.html
@@ -21,5 +21,5 @@
       </div>
     </accordion-group>
   </accordion>
-  <button type="button" class="btn btn-secondary" (click)="salvarAlteracao()">Secondary</button>
+  <button type="button" class="btn btn-secondary" (click)="salvarAlteracao()">Enviar</button>
 </div>
